# GrGrie_Preis

./: .dockerignore  .gitignore  Dockerfile  README.md  bbox_grouper.py  dataset.yaml  eval.py  groceries_separator.py  inference_with_grouping.py  lidl_products.json  model.py  pyproject.toml  scrape.py  scraper.py  text_extract.py  yolo_predict.py
app/: api.py  config.py  ocr.py  pipeline.py  yolo_service.py
configs/: classes.txt  dataset.yaml  yolo_config.yaml
data/labels/: train.cache
data/labels/train/: classes.txt  page_03.txt  page_05.txt  page_06.txt  page_09.txt  page_16.txt  page_18.txt  page_20.txt  page_23.txt  page_27.txt  page_28.txt  page_30.txt  page_31.txt  (+11 more)
data/train/: labels.cache
lidl_prospekt_screenshots_20250608_140554/: classes.txt
templates/: done.html  index.html  run.html
test_results/: all_bboxes.txt
test_results/crops_page_56/: page_56_results.json
test_results/crops_page_57/: page_57_results.json
test_results/crops_page_58/: page_58_results.json
test_results/crops_page_59/: page_59_results.json
test_results/crops_page_60/: page_60_results.json
test_results/crops_page_61/: page_61_results.json
test_results/crops_page_62/: page_62_results.json
test_results/crops_page_63/: page_63_results.json
test_results/crops_page_64/: page_64_results.json
test_results/crops_page_66/: page_66_results.json
test_results/crops_page_67/: page_67_results.json
test_results/crops_page_68/: page_68_results.json
utils/: basescraper.py  directory_manager.py  image_downloader.py  scrapers.py  utils.py  web_driver_manager.py
(+182 files in other folders)
